2011-01-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: work around Tru64/OSF 5.1 sh read bugs.
	* lib/am/check.am ($(TEST_SUITE_LOG), recheck, recheck-html):
	Test file readability before redirecting input from it, to avoid
	exiting Tru64/OSF 5.1 sh which treats read as special builtin.
	* tests/parallel-tests-unreadable-log.test: New test.
	* tests/Makefile.am (TESTS): Update.
	* NEWS: Update.

2011-01-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS, README: Update copyright years.

	Fix parallel-tests.test failure with HP-UX make.
	* tests/parallel-tests.test: Sleep inside inner tests, so logs
	are newer than logs of tests they depend on, for HP-UX make.

2011-01-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	docs: ensure example are separated with empty lines in the input
	* doc/automake.texi (Extending aclocal, Emacs Lisp, Rebuilding)
	(API Versioning, Renamed Objects, Multiple Outputs): Add empty
	lines before `@example' and after `@end example' lines, so info
	output is rendered correctly, and a following @noindent honored.
	Report by Stefano Lattarini.

2011-01-15  Jim Meyering <meyering@redhat.com>

	tests: fix comment typo
	* tests/substref.test: Fix grammar in a comment.

2011-01-13  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failures in two texinfo tests
	* tests/txinfo.test ($required): Add 'makeinfo'.
	* tests/txinfo8.test: Create a dummy 'textutils.info' file, so
	that make won't try to run makeinfo (which could be unavailable)
	to build it.
	Found by NixOS Hydra, reported by Ralf Wildenhues.

2011-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid testsuite failures due to Autoconf Fortran change.
	Autoconf v2.68-21-g727ce95 causes AC_F77_LIBRARY_LDFLAGS to
	require computing the canonical host name.  Ensure config.guess
	and config.sub files are present for respective checks.
	* tests/compile_f_c_cxx.test: Add stub files.