@@ -1,5 +1,5 @@
 #!/bin/sh
-# Copyright (C) 2004  Free Software Foundation, Inc.
+# Copyright (C) 2004, 2011 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -16,7 +16,6 @@
 
 # Check rules output for parser defined conditionally.
 
-required='flex bison gcc'
 . ./defs || Exit 1
 
 set -e
@@ -59,3 +58,5 @@ $AUTOMAKE -Wno-error
 test `grep tparse.h: Makefile.in | wc -l` = 2
 grep '@CASE_A_TRUE@tparse.h:' Makefile.in
 grep '@CASE_A_FALSE@tparse.h:' Makefile.in
+
+:
