@@ -1,3 +1,9 @@
+2011-01-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: remove useless requirements from cond36.test
+	* tests/cond36.test ($required): Remove.
+	Since we are at it, add a trailing `:' command.
+
 2011-01-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 	    Stefano Lattarini  <stefano.lattarini@gmail.com>
 
